BudgetView: Add course title, fix sequence pattern positioning, and fix browser layout bug

--- a/app/budget/directives/budgetCosts/budgetCosts.css
+++ b/app/budget/directives/budgetCosts/budgetCosts.css
@@ -57,9 +57,6 @@
 	width: 100%;
 	background-color: #f8f8f8;
 	height: 53px;
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
 	padding-right: 5px;
 }
 
