--- a/app/budget/directives/budgetCosts/courseCostsRow/courseCostsRow.css
+++ b/app/budget/directives/budgetCosts/courseCostsRow/courseCostsRow.css
@@ -11,7 +11,7 @@
 .course-costs__sequence-container {
 	width: 100%;
 	background-color: #f8f8f8;
-	height: 69px;
+	height: 128px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
